# my-gst-plugin

./: .gitignore  Cargo.toml  README.md  build.rs
src/: element.rs  lib.rs  myglsrc.rs  mysrc.rs  mytransform.rs
